# Mokka

./: CMakeLists.txt  LICENSE  README.md  Readme.md
CMake/: FindQt5.cmake
Code/: CMakeLists.txt  main.cpp  qMokkaApplication.cpp  qMokkaApplication.h  qMokkaApplication_p.h  qMokkaConfigure.h.in  qMokkaDataManager.cpp  qMokkaDataManager.h  qMokkaDataManager_p.h
Code/Core/: qMokkaCoreApplication.cpp  qMokkaCoreApplication.h  qMokkaCoreApplication_p.h  qMokkaCoreDataManager.cpp  qMokkaCoreDataManager.h  qMokkaCoreDataManager_p.h  qMokkaCorePythonManager.cpp  qMokkaCorePythonManager.h
Code/Data/: qMokkaAcquisition.cpp  qMokkaAcquisition.h  qMokkaAcquisition_p.h  qMokkaAnalog.cpp  qMokkaAnalog.h  qMokkaAnalog_p.h  qMokkaDataDecorators.h  qMokkaEvent.cpp  qMokkaEvent.h  qMokkaEvent_p.h  qMokkaForcePlate.cpp  qMokkaForcePlate.h  qMokkaForcePlate_p.h  qMokkaIMU.cpp.cpp  qMokkaIMU.h  qMokkaIMU_p.h  qMokkaPoint.cpp  qMokkaPoint.h  qMokkaPoint_p.h  qMokkaVideo.cpp  qMokkaVideo.h  qMokkaVideo_p.h
Code/Python/: qMokkaPythonConsole.cpp  qMokkaPythonConsole.h  qMokkaPythonManager.cpp  qMokkaPythonManager.h
Scripting/Python/: start.py  util.py
Utilities/CTKConsoleWidget/: README.Mokka.txt  ctkAbstractPythonManager.cpp  ctkAbstractPythonManager.h  ctkConsole.cpp  ctkPythonConsole.cpp  ctkPythonConsole.h  ctkScriptingPythonCoreConfigure.h  ctkScriptingPythonCoreExport.h  ctkScriptingPythonWidgetsExport.h  ctkWidgetsExport.h
Utilities/ParserCmdLine/: TODO
